--- a/2022-2023/Machine Learning/2.linear-models.html
+++ b/2022-2023/Machine Learning/2.linear-models.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-09-01 Thu 11:51 -->
+<!-- 2022-09-01 Thu 16:09 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Machine Learning</title>
@@ -223,17 +223,17 @@
 <span class="subtitle">Lecture 2 - Linear Models</span>
 </h1>
 
-<div id="outline-container-org3ffe97c" class="outline-2">
-<h2 id="org3ffe97c">Linear Regression</h2>
-<div class="outline-text-2" id="text-org3ffe97c">
+<div id="outline-container-orgd196c0f" class="outline-2">
+<h2 id="orgd196c0f">Linear Regression</h2>
+<div class="outline-text-2" id="text-orgd196c0f">
 </div>
-<div id="outline-container-org69007b3" class="outline-3">
-<h3 id="org69007b3">Introduction to linear models</h3>
-<div class="outline-text-3" id="text-org69007b3">
+<div id="outline-container-org83c7bd2" class="outline-3">
+<h3 id="org83c7bd2">Introduction to linear models</h3>
+<div class="outline-text-3" id="text-org83c7bd2">
 </div>
-<div id="outline-container-orgfa25e5e" class="outline-4">
-<h4 id="orgfa25e5e">Linear models</h4>
-<div class="outline-text-4" id="text-orgfa25e5e">
+<div id="outline-container-orga59ece4" class="outline-4">
+<h4 id="orga59ece4">Linear models</h4>
+<div class="outline-text-4" id="text-orga59ece4">
 <p>
 Having learnt a little about what it means to learn, we're going to look at our first
 <i>Machine Learning</i> algorithm, the staple for much of statistics, numeric prediction
@@ -242,9 +242,9 @@ using a linear model.
 </div>
 </div>
 
-<div id="outline-container-orgc88d3c9" class="outline-4">
-<h4 id="orgc88d3c9">What is a linear model?</h4>
-<div class="outline-text-4" id="text-orgc88d3c9">
+<div id="outline-container-orga2907da" class="outline-4">
+<h4 id="orga2907da">What is a linear model?</h4>
+<div class="outline-text-4" id="text-orga2907da">
 <p>
 A linear model is a prediction (a response) to an input variable. We have the
 following terms:
@@ -275,23 +275,27 @@ If we look at our linear model equation, we'll notice that it's the same equatio
 </p>
 
 
-<div id="orgc8507a6" class="figure">
+<div id="org9d1ac92" class="figure">
 <p><img src="images/linear_model.png" alt="linear_model.png" />
 </p>
 </div>
+
+<p>
+<b>TODO</b> What is the slope and intercept?
+</p>
 </div>
 </div>
 
-<div id="outline-container-orge6cbc0e" class="outline-4">
-<h4 id="orge6cbc0e">Supporting example</h4>
-<div class="outline-text-4" id="text-orge6cbc0e">
+<div id="outline-container-org3f83aa3" class="outline-4">
+<h4 id="org3f83aa3">Supporting example</h4>
+<div class="outline-text-4" id="text-org3f83aa3">
 <p>
 Let's have a look at how we would use this linear model with one of the datasets: The
 Boston housing prices.
 </p>
 
 
-<div id="org2cb5ea7" class="figure">
+<div id="orgc2d6c21" class="figure">
 <p><img src="images/boston_rooms_prices.png" alt="boston_rooms_prices.png" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Scatter plot of the number of rooms in a house against the house valuation. In this plot we can see a positive effect with some outliers to this trend.</p>
@@ -299,9 +303,9 @@ Boston housing prices.
 </div>
 </div>
 
-<div id="outline-container-orgf7c11c1" class="outline-4">
-<h4 id="orgf7c11c1">Let's fit a linear model</h4>
-<div class="outline-text-4" id="text-orgf7c11c1">
+<div id="outline-container-org35826e5" class="outline-4">
+<h4 id="org35826e5">Let's fit a linear model</h4>
+<div class="outline-text-4" id="text-org35826e5">
 <p>
 We have seen that there seems to be some correlation between the number of rooms and
 the house price. I.e. we can use the number of rooms of the house to get the
@@ -334,7 +338,7 @@ b = 1
 </p>
 
 
-<div id="org55cd583" class="figure">
+<div id="org413ccfa" class="figure">
 <p><img src="images/boston_rm_first_pred.png" alt="boston_rm_first_pred.png" />
 </p>
 <p><span class="figure-number">Figure 2: </span>A linear model line overlayed onto the boston house prices dataset. Blue circles represent samples from the dataset, while the trend line is shown in red.</p>
@@ -348,9 +352,9 @@ predicted house prices are?
 </div>
 </div>
 
-<div id="outline-container-org6e8bc1d" class="outline-4">
-<h4 id="org6e8bc1d">Evaluating our initial linear model</h4>
-<div class="outline-text-4" id="text-org6e8bc1d">
+<div id="outline-container-orgf1045cf" class="outline-4">
+<h4 id="orgf1045cf">Evaluating our initial linear model</h4>
+<div class="outline-text-4" id="text-orgf1045cf">
 <p>
 To evaluate how well, or in this case, how badly our linear model is doing, let's
 compare the predicted value from the model against the actual house price. For
@@ -400,9 +404,9 @@ estimated value and real value is $15,000!
 </div>
 </div>
 
-<div id="outline-container-org1be38e9" class="outline-4">
-<h4 id="org1be38e9">Getting better model parameters</h4>
-<div class="outline-text-4" id="text-org1be38e9">
+<div id="outline-container-org63bfc7c" class="outline-4">
+<h4 id="org63bfc7c">Getting better model parameters</h4>
+<div class="outline-text-4" id="text-org63bfc7c">
 <p>
 Okay, so we made our initial guess at the model parameters (random values for \(w,
 b\)), and these weren't very good. We were incorrectly guessing the house value by
@@ -414,14 +418,14 @@ Well if we visualise how badly we do vs the value for \(w\) we get the following
 </p>
 
 
-<div id="org921bb20" class="figure">
+<div id="org4e6e82b" class="figure">
 <p><img src="images/plot_linear_model_loss_w.png" alt="plot_linear_model_loss_w.png" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Mean absolute error (MAE) between the true and predicted house values when varying the value for \(w\) parameter in the linear model.</p>
 </div>
 
 <p>
-In figure <a href="#org921bb20">3</a>, we see that as we change the \(w\) parameter, the mean absolute
+In figure <a href="#org4e6e82b">3</a>, we see that as we change the \(w\) parameter, the mean absolute
 error (MAE), i.e. the average difference between the predicted house prices and the
 true house prices, changes. Ideally, we would like the error or <b>loss</b> to be as low as
 possible. In this case, when \(b = 1\) the lowest possible loss we can hope to achieve
@@ -446,7 +450,7 @@ we will see:
 </p>
 
 
-<div id="orgcaaff75" class="figure">
+<div id="orgdfeed3e" class="figure">
 <p><img src="images/loss_curve_w_1.png" alt="loss_curve_w_1.png" />
 </p>
 </div>
@@ -458,19 +462,19 @@ down the loss curve.
 </p>
 
 
-<div id="org9a19065" class="figure">
+<div id="org4d3e181" class="figure">
 <p><img src="images/loss_curve_w_1_with_path.png" alt="loss_curve_w_1_with_path.png" />
 </p>
 </div>
 
 <p>
 To determine which way is up, and which way is down the curve, we use the <b>Gradient</b> of
-the curve (hence Gradient Descent). We compute the gradient using:
+the curve (hence Gradient Descent). We compute the gradient using finite differences method:
 </p>
 
 <p>
 \[
-\Delta = \frac{f(x) - f(x+h)}{x - (x+h)}
+\Delta = \frac{f(x+h) - f(x)}{h}
 \]
 </p>
 
@@ -480,7 +484,7 @@ value.
 </p>
 
 
-<div id="orgdc3c3c5" class="figure">
+<div id="orgbc82e67" class="figure">
 <p><img src="images/small_step.png" alt="small_step.png" />
 </p>
 </div>
@@ -491,19 +495,21 @@ If we select \(h = 0.5\) then we will have the formula:
 
 <p>
 \[
-\Delta_w = \frac{\mathcal{L}(w) - \mathcal{L}(w + 0.5)}{w - (w + 0.5)}
+\Delta_w = \frac{\mathcal{L}(w + 0.5) - \mathcal{L}(w)}{w}
 \]
 </p>
 
 <p>
 where \(\mathcal{L}\) represents our loss function, MAE. If we calculate this we have:
 </p>
-\begin{aligned}
-\Delta_w &= \frac{\mathcal{L}(w) - \mathcal{L}(w + 0.5)}{w - (w + h)} \\
-&= \frac{\mathcal{L}(1) - \mathcal{L}(1.5)}{1  - (1 + 0.5)} \\
-&= \frac{15 - 12}{-0.5} \\
+<p>
+\[\begin{aligned}
+\Delta_w &= \frac{\mathcal{L}(w + 0.5) - \mathcal{L}(w)}{h} \\
+&= \frac{\mathcal{L}(1.5)- \mathcal{L}(1)}{1  - (0.5)} \\
+&= \frac{12 - 15}{0.5} \\
 &= -6.0
-\end{aligned}
+\end{aligned}\]
+</p>
 
 <p>
 Given that the gradient is a negative number, we know that the curve is going
@@ -518,44 +524,72 @@ down/decreasing. So we will want to move \(w\) in this direction &#x2013; we wan
 </p>
 
 <p>
+If we plug in the numbers we've calculated for when \(w = 1\) we get and \(eta = 0.5\):
+</p>
+
+<p>
+\[\begin{aligned}
+\overline{w} &= w - \eta \Delta_w \\
+&= 1.0 - (0.5 * -6.0) \\
+&= 1.0 - (-3.0) \\
+&= 4.0
+\end{aligned}\]
+</p>
+
+<p>
 Our new value for the \(w\) parameter (\(\overline{w}\)) is computed by taking its
 original value and subtracting the gradient modulated/multiplied by \(\eta\). \(\eta\) in
-this case is what will allow us to take our <b>small steps</b>.
+this case is what will allow us to take our <b>small steps</b>. It is important to set
+\(\eta\) to a suitably small value, as high values for \(\eta\) will cause the Gradient
+Descent to behave erratically, and even, make our loss worse!
 </p>
+
+
+<div id="org97d1867" class="figure">
+<p><img src="images/small_step_eta.png" alt="small_step_eta.png" />
+</p>
+<p><span class="figure-number">Figure 4: </span>Plotting the effect of \(\eta\) on the step change of \(w\).</p>
+</div>
+
+<p>
+In figure <a href="#org97d1867">4</a>, we've varied the value of \(\eta\) and computed 10 steps of updating
+the \(w\) parameter in our linear model. When \(\eta=0.05\), we see that \(w\) is slowly
+being updated in a way that is causing our loss to decrease, but it is more so slowly
+that we don't reach the optimal value for \(w\). When \(\eta=3\), each change in \(w\) is
+too large, so we over-shoot the optimal value, and end up bouncing back and forth
+without ever improving. Finally, when we set \(\eta=0.3\), the changes in \(w\) are
+sufficiently large enough such that we reach the <b>global minima</b> in time, but they are
+also small enough so that we don't over-shoot this same minimum.
+</p>
+
+<p>
+If we then apply the Gradient Descent algorithm to both parameters of the linear
+model \(w, b\), then we can find the optimal trend line for this data. Furthermore,
+visualising this will look something like figure <a href="#org66b65c2">5</a>.
+</p>
+
+
+<div id="org66b65c2" class="figure">
+<p><img src="images/lm_learn.gif" alt="lm_learn.gif" />
+</p>
+<p><span class="figure-number">Figure 5: </span>Visualising the linear model as its parameters improve.</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 
-<div id="outline-container-org7181e54" class="outline-4">
-<h4 id="org7181e54">How to select the best weights</h4>
-<div class="outline-text-4" id="text-org7181e54">
-<ul class="org-ul">
-<li>Lowest point on the curve.</li>
-</ul>
+<div id="outline-container-orge971873" class="outline-2">
+<h2 id="orge971873">Logistic Regression</h2>
+<div class="outline-text-2" id="text-orge971873">
 </div>
+<div id="outline-container-org8c59690" class="outline-3">
+<h3 id="org8c59690">Classification</h3>
+<div class="outline-text-3" id="text-org8c59690">
 </div>
-
-<div id="outline-container-org9ab4913" class="outline-4">
-<h4 id="org9ab4913">Automatically computing the best weights</h4>
-<div class="outline-text-4" id="text-org9ab4913">
-<ul class="org-ul">
-<li>Gradient descent</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-
-<div id="outline-container-orge0bb91d" class="outline-2">
-<h2 id="orge0bb91d">Logistic Regression</h2>
-<div class="outline-text-2" id="text-orge0bb91d">
-</div>
-<div id="outline-container-orgde72ff1" class="outline-3">
-<h3 id="orgde72ff1">Classification</h3>
-<div class="outline-text-3" id="text-orgde72ff1">
-</div>
-<div id="outline-container-org3746f91" class="outline-4">
-<h4 id="org3746f91">Moving from regression to classification</h4>
-<div class="outline-text-4" id="text-org3746f91">
+<div id="outline-container-org632128b" class="outline-4">
+<h4 id="org632128b">Moving from regression to classification</h4>
+<div class="outline-text-4" id="text-org632128b">
 <p>
 We now turn to classification
 </p>
@@ -567,7 +601,7 @@ We now turn to classification
 <div id="postamble" class="status">
 <p class="date">Date: &lt;TODO&gt;</p>
 <p class="author">Author: Jay Morgan</p>
-<p class="date">Created: 2022-09-01 Thu 11:51</p>
+<p class="date">Created: 2022-09-01 Thu 16:09</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
