--- a/2022-2023/Machine Learning/2.linear-models.html
+++ b/2022-2023/Machine Learning/2.linear-models.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-09-01 Thu 16:09 -->
+<!-- 2022-09-02 Fri 11:09 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Machine Learning</title>
@@ -223,17 +223,17 @@
 <span class="subtitle">Lecture 2 - Linear Models</span>
 </h1>
 
-<div id="outline-container-orgd196c0f" class="outline-2">
-<h2 id="orgd196c0f">Linear Regression</h2>
-<div class="outline-text-2" id="text-orgd196c0f">
+<div id="outline-container-org036de73" class="outline-2">
+<h2 id="org036de73">Linear Regression</h2>
+<div class="outline-text-2" id="text-org036de73">
 </div>
-<div id="outline-container-org83c7bd2" class="outline-3">
-<h3 id="org83c7bd2">Introduction to linear models</h3>
-<div class="outline-text-3" id="text-org83c7bd2">
+<div id="outline-container-org38d3305" class="outline-3">
+<h3 id="org38d3305">Introduction to linear models</h3>
+<div class="outline-text-3" id="text-org38d3305">
 </div>
-<div id="outline-container-orga59ece4" class="outline-4">
-<h4 id="orga59ece4">Linear models</h4>
-<div class="outline-text-4" id="text-orga59ece4">
+<div id="outline-container-org2a51789" class="outline-4">
+<h4 id="org2a51789">Linear models</h4>
+<div class="outline-text-4" id="text-org2a51789">
 <p>
 Having learnt a little about what it means to learn, we're going to look at our first
 <i>Machine Learning</i> algorithm, the staple for much of statistics, numeric prediction
@@ -242,9 +242,9 @@ using a linear model.
 </div>
 </div>
 
-<div id="outline-container-orga2907da" class="outline-4">
-<h4 id="orga2907da">What is a linear model?</h4>
-<div class="outline-text-4" id="text-orga2907da">
+<div id="outline-container-org556dea5" class="outline-4">
+<h4 id="org556dea5">What is a linear model?</h4>
+<div class="outline-text-4" id="text-org556dea5">
 <p>
 A linear model is a prediction (a response) to an input variable. We have the
 following terms:
@@ -269,33 +269,66 @@ y = w x + b
 where \(y\) is the response/output/prediction of the model, \(x\) is the dependant
 variable, and \(w, b\) are the model parameters.
 </p>
+</div>
+</div>
 
+<div id="outline-container-org9e656bc" class="outline-4">
+<h4 id="org9e656bc">Slope &amp; intercept</h4>
+<div class="outline-text-4" id="text-org9e656bc">
 <p>
 If we look at our linear model equation, we'll notice that it's the same equation for a straight line.
 </p>
 
 
-<div id="org9d1ac92" class="figure">
+<div id="org8e44981" class="figure">
 <p><img src="images/linear_model.png" alt="linear_model.png" />
 </p>
 </div>
 
 <p>
-<b>TODO</b> What is the slope and intercept?
+As we've seen, the linear model, or linear regression, has two parameters: \(w,
+b\). What do these parameters represent?
+</p>
+
+<ul class="org-ul">
+<li>The \(w\) parameter is the <b>slope</b> or strength of relationship between the dependant
+variable and the response.</li>
+<li>Meanwhile, the \(b\) parameter is called the <b>intercept</b>, as it's the value of the
+response when the dependant variable is zero.</li>
+</ul>
+
+<p>
+Let's look at these two parameters.
+</p>
+
+
+<div id="orgfc01480" class="figure">
+<p><img src="images/slope_1.png" alt="slope_1.png" />
+</p>
+</div>
+
+<p>
+Here we see that when \(w\) is 0 (left figure), any change in \(x\) results in 0 change
+in \(y\). While, with \(w = 2\), \(y\) increases two-fold by every change in \(x\). Finally,
+when the slope is negative, we see that \(y\) decreases.
+</p>
+
+<p>
+Notice how the line is at 5 when \(x\) is zero, this is because \(b = 5\).
 </p>
 </div>
 </div>
 
-<div id="outline-container-org3f83aa3" class="outline-4">
-<h4 id="org3f83aa3">Supporting example</h4>
-<div class="outline-text-4" id="text-org3f83aa3">
+<div id="outline-container-orgcebf620" class="outline-4">
+<h4 id="orgcebf620">Supporting example</h4>
+<div class="outline-text-4" id="text-orgcebf620">
 <p>
 Let's have a look at how we would use this linear model with one of the datasets: The
 Boston housing prices.
 </p>
 
 
-<div id="orgc2d6c21" class="figure">
+<div id="org09ceab4" class="figure">
 <p><img src="images/boston_rooms_prices.png" alt="boston_rooms_prices.png" />
 </p>
 <p><span class="figure-number">Figure 1: </span>Scatter plot of the number of rooms in a house against the house valuation. In this plot we can see a positive effect with some outliers to this trend.</p>
@@ -303,9 +336,9 @@ Boston housing prices.
 </div>
 </div>
 
-<div id="outline-container-org35826e5" class="outline-4">
-<h4 id="org35826e5">Let's fit a linear model</h4>
-<div class="outline-text-4" id="text-org35826e5">
+<div id="outline-container-orgd1cbab5" class="outline-4">
+<h4 id="orgd1cbab5">Let's fit a linear model</h4>
+<div class="outline-text-4" id="text-orgd1cbab5">
 <p>
 We have seen that there seems to be some correlation between the number of rooms and
 the house price. I.e. we can use the number of rooms of the house to get the
@@ -338,7 +371,7 @@ b = 1
 </p>
 
 
-<div id="org413ccfa" class="figure">
+<div id="org45b7367" class="figure">
 <p><img src="images/boston_rm_first_pred.png" alt="boston_rm_first_pred.png" />
 </p>
 <p><span class="figure-number">Figure 2: </span>A linear model line overlayed onto the boston house prices dataset. Blue circles represent samples from the dataset, while the trend line is shown in red.</p>
@@ -352,9 +385,9 @@ predicted house prices are?
 </div>
 </div>
 
-<div id="outline-container-orgf1045cf" class="outline-4">
-<h4 id="orgf1045cf">Evaluating our initial linear model</h4>
-<div class="outline-text-4" id="text-orgf1045cf">
+<div id="outline-container-orgf20b694" class="outline-4">
+<h4 id="orgf20b694">Evaluating our initial linear model</h4>
+<div class="outline-text-4" id="text-orgf20b694">
 <p>
 To evaluate how well, or in this case, how badly our linear model is doing, let's
 compare the predicted value from the model against the actual house price. For
@@ -404,9 +437,9 @@ estimated value and real value is $15,000!
 </div>
 </div>
 
-<div id="outline-container-org63bfc7c" class="outline-4">
-<h4 id="org63bfc7c">Getting better model parameters</h4>
-<div class="outline-text-4" id="text-org63bfc7c">
+<div id="outline-container-org3193c41" class="outline-4">
+<h4 id="org3193c41">Getting better model parameters</h4>
+<div class="outline-text-4" id="text-org3193c41">
 <p>
 Okay, so we made our initial guess at the model parameters (random values for \(w,
 b\)), and these weren't very good. We were incorrectly guessing the house value by
@@ -418,14 +451,14 @@ Well if we visualise how badly we do vs the value for \(w\) we get the following
 </p>
 
 
-<div id="org4e6e82b" class="figure">
+<div id="orgf25ddcc" class="figure">
 <p><img src="images/plot_linear_model_loss_w.png" alt="plot_linear_model_loss_w.png" />
 </p>
 <p><span class="figure-number">Figure 3: </span>Mean absolute error (MAE) between the true and predicted house values when varying the value for \(w\) parameter in the linear model.</p>
 </div>
 
 <p>
-In figure <a href="#org4e6e82b">3</a>, we see that as we change the \(w\) parameter, the mean absolute
+In figure <a href="#orgf25ddcc">3</a>, we see that as we change the \(w\) parameter, the mean absolute
 error (MAE), i.e. the average difference between the predicted house prices and the
 true house prices, changes. Ideally, we would like the error or <b>loss</b> to be as low as
 possible. In this case, when \(b = 1\) the lowest possible loss we can hope to achieve
@@ -450,7 +483,7 @@ we will see:
 </p>
 
 
-<div id="orgdfeed3e" class="figure">
+<div id="org98173df" class="figure">
 <p><img src="images/loss_curve_w_1.png" alt="loss_curve_w_1.png" />
 </p>
 </div>
@@ -462,7 +495,7 @@ down the loss curve.
 </p>
 
 
-<div id="org4d3e181" class="figure">
+<div id="orgf938495" class="figure">
 <p><img src="images/loss_curve_w_1_with_path.png" alt="loss_curve_w_1_with_path.png" />
 </p>
 </div>
@@ -484,7 +517,7 @@ value.
 </p>
 
 
-<div id="orgbc82e67" class="figure">
+<div id="org222d1dc" class="figure">
 <p><img src="images/small_step.png" alt="small_step.png" />
 </p>
 </div>
@@ -545,14 +578,14 @@ Descent to behave erratically, and even, make our loss worse!
 </p>
 
 
-<div id="org97d1867" class="figure">
+<div id="org6f47526" class="figure">
 <p><img src="images/small_step_eta.png" alt="small_step_eta.png" />
 </p>
 <p><span class="figure-number">Figure 4: </span>Plotting the effect of \(\eta\) on the step change of \(w\).</p>
 </div>
 
 <p>
-In figure <a href="#org97d1867">4</a>, we've varied the value of \(\eta\) and computed 10 steps of updating
+In figure <a href="#org6f47526">4</a>, we've varied the value of \(\eta\) and computed 10 steps of updating
 the \(w\) parameter in our linear model. When \(\eta=0.05\), we see that \(w\) is slowly
 being updated in a way that is causing our loss to decrease, but it is more so slowly
 that we don't reach the optimal value for \(w\). When \(\eta=3\), each change in \(w\) is
@@ -565,11 +598,11 @@ also small enough so that we don't over-shoot this same minimum.
 <p>
 If we then apply the Gradient Descent algorithm to both parameters of the linear
 model \(w, b\), then we can find the optimal trend line for this data. Furthermore,
-visualising this will look something like figure <a href="#org66b65c2">5</a>.
+visualising this will look something like figure <a href="#org6ee9eee">5</a>.
 </p>
 
 
-<div id="org66b65c2" class="figure">
+<div id="org6ee9eee" class="figure">
 <p><img src="images/lm_learn.gif" alt="lm_learn.gif" />
 </p>
 <p><span class="figure-number">Figure 5: </span>Visualising the linear model as its parameters improve.</p>
@@ -579,17 +612,17 @@ visualising this will look something like figure <a href="#org66b65c2">5</a>.
 </div>
 </div>
 
-<div id="outline-container-orge971873" class="outline-2">
-<h2 id="orge971873">Logistic Regression</h2>
-<div class="outline-text-2" id="text-orge971873">
+<div id="outline-container-orgdcaf4d1" class="outline-2">
+<h2 id="orgdcaf4d1">Logistic Regression</h2>
+<div class="outline-text-2" id="text-orgdcaf4d1">
 </div>
-<div id="outline-container-org8c59690" class="outline-3">
-<h3 id="org8c59690">Classification</h3>
-<div class="outline-text-3" id="text-org8c59690">
+<div id="outline-container-orga880d22" class="outline-3">
+<h3 id="orga880d22">Classification</h3>
+<div class="outline-text-3" id="text-orga880d22">
 </div>
-<div id="outline-container-org632128b" class="outline-4">
-<h4 id="org632128b">Moving from regression to classification</h4>
-<div class="outline-text-4" id="text-org632128b">
+<div id="outline-container-org26fa635" class="outline-4">
+<h4 id="org26fa635">Moving from regression to classification</h4>
+<div class="outline-text-4" id="text-org26fa635">
 <p>
 We now turn to classification
 </p>
@@ -601,7 +634,7 @@ We now turn to classification
 <div id="postamble" class="status">
 <p class="date">Date: &lt;TODO&gt;</p>
 <p class="author">Author: Jay Morgan</p>
-<p class="date">Created: 2022-09-01 Thu 16:09</p>
+<p class="date">Created: 2022-09-02 Fri 11:09</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
